--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,9 @@
     "bower_components",
     "test",
     "tests"
+  ],
+  "keywords": [
+    "validator", "validation", "validate", "sanitization",
+    "sanitize", "sanitisation", "sanitise", "assert"
   ]
 }
