--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "invalid.js",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Validate a data object against some predefined rules",
   "main": "dist/invalid.js",
   "author": {
@@ -18,7 +18,13 @@
     "tests"
   ],
   "keywords": [
-    "validator", "validation", "validate", "sanitization",
-    "sanitize", "sanitisation", "sanitise", "assert"
+    "validator",
+    "validation",
+    "validate",
+    "sanitization",
+    "sanitize",
+    "sanitisation",
+    "sanitise",
+    "assert"
   ]
 }
