--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-groc": "^0.4.5",
     "grunt-jscs-checker": "^0.6.0",
     "grunt-lintspaces": "^0.5.1",
+    "grunt-preprocess": "^4.0.0",
     "grunt-umd": "^1.7.4",
     "jit-grunt": "^0.7.0",
     "jshint-stylish": "^0.2.0",
