--- a/.jshintrc
+++ b/.jshintrc
@@ -18,7 +18,7 @@
   "regexp": true,
   "undef": true,
   "unused": true,
-  "strict": true,
+  "strict": false,
   "maxdepth": 3,
   "trailing": true,
   "smarttabs": true,
